--- a/index.html
+++ b/index.html
@@ -125,11 +125,7 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row focus">
         <div class="column">
           <div class="column-1">
-            <picture>
-              <source srcset="./images/Past-Help/webp/begnas-yoga-1.webp">
-              <source srcset="./images/jpg/Past-Help/begnas-yoga.jpg">
-              <img src="./images/jpg/Past-Help/begnas-yoga.jpg" alt="">
-            </picture>
+            <img src="../images/Past-Help/webp/begnas-yoga-1.webp" alt="">
           </div>
         </div>
         <div class="column">
@@ -626,7 +622,8 @@ facing hardship due merely to the circumstances of their birth</p>
   <footer id="footer" class="bg-dark">
     <p>Copyright &copy; 2020 - All Rights Reserved - Nepal Life Improvement Foundation</p>
     <div class="links">
-      <p>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik,</a> <a href="https://www.flaticon.com/free-icon/charity_2869375?term=charity&page=5&position=84" title="Nikita Golubev">Nikita Golubev, </a> and <a href="https://www.flaticon.com/authors/srip" title="srip">srip </a>from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+      <p>Icons made by <a href="http://www.freepik.com" target="_blank" title="Freepik">Freepik,</a> <a href="https://www.flaticon.com/free-icon/charity_2869375?term=charity&page=5&position=84" target="_blank" title="Nikita Golubev">Nikita Golubev, </a> and <a href="https://www.flaticon.com/authors/srip" target="_blank" title="srip">srip </a>from <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">flaticon.com</a></p>
+      <p>Photos by <a href="https://www.facebook.com/lillian.mason.58?__tn__=%2CdC-R-R&eid=ARDAuWczIzdLymhIirB5S-M5uTXUH7tLKDx1b9uDKGKwbHrnSPAQi_rCFILQIlGMrzd0q05m5gn0duB-&hc_ref=ARSv0S_MP-bg66NTHAat_MP1DEmYGp0D6XyQfRd9_eVCVj1M6qkUruuJSZOs8Ro6Zs4&fref=nf" target="_blank" title="Lilly">Lilly Mason, </a> Robbie Prokop, <a href="https://www.pexels.com/photo/woman-in-red-dresses-carrying-firewood-3820222/" target="_blank" title="Meyer">Volker Meyer, </a> <a href="https://www.pexels.com/photo/two-monks-walking-between-trees-750895/" target="_blank" title="Jong">Wouter de Jong, </a> <a href="https://www.pexels.com/photo/photo-of-mountains-under-clouds-2902939/" target="_blank" title="Poet">thepoeticimagery, </a> <a href="https://unsplash.com/@antoinebarres" target="_blank">Antoine Barrès, </a> and <a href="https://unsplash.com/@ackley5" target="_blank" >Jeff Ackley</a></p>
     </div>
   </footer>
 
