--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     <title>NLIF Projects</title>
   </head>
   <body>
-    <header class="hero blog">
+    <header id="blog" class="hero blog">
       <div id="navbar" class="navbar top">
         <h1 class="logo">
           <a href="index.html#home"><span class="text-primary"> Nepal</span> L.I.F.</h1></a>
@@ -133,7 +133,7 @@
           </article>
           <article class="card">
             <img src="images/Past-Help/webp/begnas-yoga-1.webp" alt="">
-            <div class="category category-inf">Infrastructure</div>
+            <div class="category category-gen">General</div>
             <h3>Establisment of NLIF Headquaters</h3>
             <p>
               With all the help that has been given and that will continue to be given, a headquaters was much needed. We have aquired a building and have signed a 2 year lease. Donations will be needed for the cost of the rent and utilities.
@@ -148,7 +148,7 @@
     <footer id="footer" class="bg-dark">
       <p>Copyright &copy; 2020 - All Rights Reserved - Nepal Life Improvement Foundation</p>
       <div class="links">
-        <p>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik,</a> <a href="https://www.flaticon.com/free-icon/charity_2869375?term=charity&page=5&position=84" title="Nikita Golubev">Nikita Golubev, </a> and <a href="https://www.flaticon.com/authors/srip" title="srip">srip </a>from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+        <p>Photos by <a href="https://www.facebook.com/lillian.mason.58?__tn__=%2CdC-R-R&eid=ARDAuWczIzdLymhIirB5S-M5uTXUH7tLKDx1b9uDKGKwbHrnSPAQi_rCFILQIlGMrzd0q05m5gn0duB-&hc_ref=ARSv0S_MP-bg66NTHAat_MP1DEmYGp0D6XyQfRd9_eVCVj1M6qkUruuJSZOs8Ro6Zs4&fref=nf" target="_blank" title="Lilly">Lilly Mason</a></p>
       </div>
     </footer>
 
