--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Nepal Life Improvement Foundation is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
+  <meta property="og:title" content="Nepal Life Improvement Foundation">
+  <meta property="og:description" content="Nepal Life Improvement Foundation is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
+  <meta property="og:image" content="https://nepallife.org//images/mountain-1.jpg">
+  <meta property="og:url" content="https://nepallife.org">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="Nepal Life Improvement Foundation, nlif, NLIF, Charity, NGO, nepallife, Nepal, Donate, Donation, canada, nepal life, nepal,  Maury Mason, Robbie Prokop, Lilly Mason, Villagers, Help, Give, Improvement, Development, Growth, Gift, Benefit, Support, Projects,">
+  <meta name="keywords" content="Nepal Life Improvement Foundation, nlif, NLIF, Charity, NGO, nepallife, Nepal, Donate, Donation, canada, nepal life, nepal,  Maury Mason, founder, Villagers, Help, Give, Improvement, Development, Growth, Gift, Benefit, Support, Projects,">
   <meta name="author" content="Robbie Prokop, Maury Mason, Lilly Mason">
-  <meta name="description" content="Nepal Life Improvement Foundation. Improving the lives of Nepalese villagers one project at a time. Make a donation for the benefit of others">
   <meta name="google-site-verification" content="T1DPOFo7gv6vX0tBv3P16foDh2wync4wwa9sSPvnv7E" />
-  <link rel="shortcut icon" type="image/x-icon" href="./icons/favicon.ico">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
   <meta name="yandex-verification" content="2ecb50d890795f0c" />
   <meta name="msvalidate.01" content="40FDF646A6A589717E0209625D0C26D4" />
+  <link rel="shortcut icon" type="image/x-icon" href="./icons/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/utilities.css">
