--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="Nepal Life Improvement Foundation is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
   <meta property="og:title" content="Nepal Life Improvement Foundation">
-  <meta property="og:description" content="Nepal Life Improvement Foundation is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
+  <meta property="og:description" content="NLIF is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
   <meta property="og:image" content="https://nepallife.org//images/mountain-1.jpg">
   <meta property="og:url" content="https://nepallife.org">
 
@@ -98,8 +98,13 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row">
         <div class="column">
           <div class="column-1">
+            <picture>
+              <source srcset="./images/Nepal/webp/begnas-boat-crop.webp" type="image/webp">
+              <source srcset="./images/jpg/Nepal/begnas-boat-crop.jpg" type="image/jpeg"> 
+              <img src="./images/jpg/Nepal/begnas-boat-crop.jpg" alt="">
+            </picture>
 
-            <img src="./images/Nepal/webp/begnas-boat-crop.webp" alt="">
+            <!-- <img src="./images/Nepal/webp/begnas-boat-crop.webp" alt=""> -->
           </div>
         </div>
         <div class="column">
