--- a/index.html
+++ b/index.html
@@ -103,8 +103,6 @@ facing hardship due merely to the circumstances of their birth</p>
               <source srcset="./images/jpg/Nepal/begnas-boat-crop.jpg" type="image/jpeg"> 
               <img src="./images/jpg/Nepal/begnas-boat-crop.jpg" alt="">
             </picture>
-
-            <!-- <img src="./images/Nepal/webp/begnas-boat-crop.webp" alt=""> -->
           </div>
         </div>
         <div class="column">
@@ -135,7 +133,12 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row focus">
         <div class="column">
           <div class="column-1">
-            <img src="../images/Past-Help/webp/begnas-yoga-1.webp" alt="">
+            <picture>
+              <source srcset="../images/Past-Help/webp/begnas-yoga-1.webp" type="image/webp">
+              <source srcset="./images/jpg/Past-Help/begnas-yoga-1.jpg" type="image/jpeg"> 
+              <img src="../images/Past-Help/webp/begnas-yoga-1.webp" alt="">
+              
+            </picture>
           </div>
         </div>
         <div class="column">
