--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@ facing hardship due merely to the circumstances of their birth</p>
             <picture>
               <source srcset="../images/Past-Help/webp/begnas-yoga-1.webp" type="image/webp">
               <source srcset="./images/jpg/Past-Help/begnas-yoga-1.jpg" type="image/jpeg"> 
-              <img src="../images/jpg/Past-Help/webp/begnas-yoga-1.webp" alt="">
-              
+              <img src="../images/jpg/Past-Help/begnas-yoga-1.jpg" alt="">
             </picture>
           </div>
         </div>
@@ -575,21 +574,33 @@ facing hardship due merely to the circumstances of their birth</p>
       <section id="team" class="team">
         <div class="flex-items">
           <div class="president">
-            <img src="./images/team/webp/hair-crop.webp" alt="">
+            <picture>
+              <source srcset="./images/team/webp/hair-crop.webp" type="image/webp">
+              <source srcset="./images/jpg/team/hair-crop.jpg" type="image/jpeg"> 
+              <img src="../images/jpg/team/hair-crop.jpg" alt="">
+            </picture>
             <div>
               <h4>Robbie Prokop</h4>
 
             </div>
           </div>
           <div class="vp">
-            <img src="./images/team/webp/maury-lives-crop.webp" alt="">
+            <picture>
+              <source srcset="./images/team/webp/maury-lives-crop.webp" type="image/webp">
+              <source srcset="./images/jpg/team/maury-lives-crop.jpg" type="image/jpeg"> 
+              <img src="../images/jpg/team/maury-lives-crop.jpg" alt="">
+            </picture>
             <div>
               <h4>Maury Mason</h4>
 
             </div>
           </div>
           <div class="dc">
-            <img src="./images/team/webp/lilly-crop.webp" alt="">
+            <picture>
+              <source srcset="./images/team/webp/lilly-crop.webp" type="image/webp">
+              <source srcset="./images/jpg/team/lilly-crop.jpg" type="image/jpeg"> 
+              <img src="../images/jpg/team/lilly-crop.jpg" alt="">
+            </picture>
             <div>
               <h4>Lillian Mason</h4>
 
@@ -604,7 +615,11 @@ facing hardship due merely to the circumstances of their birth</p>
         <div class="row">
           <div class="column">
             <div class="column-1">
-              <img src="./images/webp/phone-booth-crop.webp" alt="">
+              <picture>
+                <source srcset="./images/webp/phone-booth-crop.webp" type="image/webp">
+                <source srcset="./images/jpg/phone-booth-crop.jpg" type="image/jpeg"> 
+                <img src="../images/jpg/phone-booth-crop.jpg" alt="">
+              </picture>
             </div>
           </div>
           <div class="column">
