--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ facing hardship due merely to the circumstances of their birth</p>
             <picture>
               <source srcset="../images/Past-Help/webp/begnas-yoga-1.webp" type="image/webp">
               <source srcset="./images/jpg/Past-Help/begnas-yoga-1.jpg" type="image/jpeg"> 
-              <img src="../images/jpg/Past-Help/begnas-yoga-1.jpg" alt="">
+              <img src="./images/jpg/Past-Help/begnas-yoga-1.jpg" alt="">
             </picture>
           </div>
         </div>
@@ -331,6 +331,11 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row">
         <div class="column">
           <div class="column-1">
+            <picture>
+              <source srcset="./images/Nepal/webp/villagers-1-crop.webp" type="image/webp">
+              <source srcset="./images/jpg/Nepal/villagers-1-crop.jpg" type="image/jpeg"> 
+              <img src="../images/jpg/Nepal/villagers-1-crop.jpg" alt="">
+            </picture>
             <img src="./images/Nepal/webp/villagers-1-crop.webp" alt="">
           </div>
         </div>
