--- a/index.html
+++ b/index.html
@@ -257,14 +257,14 @@ facing hardship due merely to the circumstances of their birth</p>
 
       <div class="gal-grid">
         <div class="gal gal-1">
-          <a href="./images/webp/mountain-4.webp" 
+          <a href="./images/jpg/mountain-4.jpg" 
           data-lightbox="photos" 
           data-title="Himalayas of Nepal">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-2">
-          <a href="./images/Nepal/webp/villager-workers-crop.webp" 
+          <a href="./images/jpg/Nepal/villager-workers-crop.jpg" 
           data-lightbox="photos" 
           data-title="Village Workers">
           <img src="" alt="">
@@ -272,28 +272,28 @@ facing hardship due merely to the circumstances of their birth</p>
         </div>
 
         <div class="gal gal-3">
-          <a href="./images/Nepal/webp/villagers-4-crop.webp" 
+          <a href="./images/jpg/Nepal/villagers-4-crop.jpg" 
           data-lightbox="photos" 
           data-title="Daily Village Work">
           <img src="" alt="">
           </a> 
         </div>
         <div class="gal gal-4">
-          <a href="./images/Nepal/webp/begnas-lake.webp" 
+          <a href="./images/jpg/Nepal/begnas-lake.jpg" 
           data-lightbox="photos" 
           data-title="Begnas Lake">
           <img src="" alt="">
           </a>
         </div>        
         <div class="gal gal-5">
-          <a href="./images/Nepal/webp/bandipur.webp" 
+          <a href="./images/jpg/Nepal/bandipur.jpg" 
           data-lightbox="photos" 
           data-title="Bandipur">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-6">
-          <a href="./images/webp/mountain-3.webp" 
+          <a href="./images/jpg/mountain-3.jpg" 
           data-lightbox="photos" 
           data-title="Annapurna Mountain">
           <img src="" alt="">
@@ -301,21 +301,21 @@ facing hardship due merely to the circumstances of their birth</p>
         </div>
         
         <div class="gal gal-7">
-          <a href="./images/Nepal/webp/buddha-crop.webp" 
+          <a href="./images/jpg/Nepal/buddha-crop.jpg" 
           data-lightbox="photos" 
           data-title="Buddhist Country">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-8">
-          <a href="./images/Nepal/webp/monks-crop.webp" 
+          <a href="./images/jpg/Nepal/monks-crop.jpg" 
           data-lightbox="photos" 
           data-title="Honorable Monks">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-9">
-          <a href="./images/Nepal/webp/misty-village.webp" 
+          <a href="./images/jpg/Nepal/misty-village.jpg" 
           data-lightbox="photos" 
           data-title="Nepalese Village">
           <img src="" alt="">
