--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Nepal Life Improvement Foundation is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
   <meta property="og:title" content="Nepal Life Improvement Foundation">
   <meta property="og:description" content="NLIF is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
-  <meta property="og:image" content="https://nepallife.org//images/mountain-1.jpg">
+  <meta property="og:image" content="https://nepallife.org/images/mountain-1.jpg">
   <meta property="og:url" content="https://nepallife.org">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,6 @@
   <meta name="yandex-verification" content="2ecb50d890795f0c" />
   <meta name="msvalidate.01" content="40FDF646A6A589717E0209625D0C26D4" />
   <link rel="shortcut icon" type="image/x-icon" href="./icons/favicon.ico">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/utilities.css">
