--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
         <h2 class="py-1">Past Projects</h2>
         <div class="articles-container">
           <article class="card">
-            <img src="images/Past-Help/webp/bathroom.webp" alt="" />
+            <img src="images/jpg/Past-Help/bathroom.jpg" alt="" />
             <div>
               <div class="category category-hea card-center">Health</div>
               <h3>Bathroom</h3>
@@ -65,17 +65,15 @@
           </article>
           <article class="card card-center bg-dark">
             <div>
-              <div class="category category-inf">Infrastructure</div>
-              <h3>Dinesh House Homestay</h3>
+              <div class="category category-hea">Infrastructure</div>
+              <h3>Ambulance to Kathmandu</h3>
               <p>
-                Kitchen rebuilt after the 2015 earthquake as well as an
-                addiditional room has been added for rental income from foreign
-                travellers.
+                A mother was on the verge of losing her 2 year old son. He needed immediate medical treatment. Fortunately, we were able to provide enough funding to send her son to a hospital in Kathmandu. 
               </p>
             </div>
           </article>
           <article class="card">
-            <img src="images/Past-Help/webp/food-drive.webp" alt="">
+            <img src="images/jpg/Past-Help/food-drive.jpg" alt="">
             <div class="category category-hea card-center">Health</div>
             <h3>COVID-19 Food Drive</h3>
             <p>
@@ -88,10 +86,10 @@
             <p>
               After losing their kitchen in a landslide, this family of six was at a loss. With generous donations from numerous people, we were abe to build a functional kitchen for this family.
             </p>
-            <img src="images/Past-Help/webp/kitchen.webp" alt="">
+            <img src="images/jpg/Past-Help/kitchen.jpg" alt="">
           </article>
           <article class="card">
-            <img src="images/Past-Help/webp/pathway.webp" alt="">
+            <img src="images/jpg/Past-Help/pathway.jpg" alt="">
             <div class="category category-inf">Infrastructure</div>
             <h3>Pathway Restoration</h3>
             <p>
@@ -113,10 +111,10 @@
                 Repairing the roof of the Gumba Stupa Buddhist Temple, damaged from monsoon rains. An important cultural and spiritual centre. The majority of the labour was done by volunteers from the village. 
               </p>
             </div>
-            <img src="images/Past-Help/webp/stupa-2.webp" alt="" />
+            <img src="images/jpg/Past-Help/stupa-2.jpg" alt="" />
           </article>
           <article class="card">
-            <img src="images/Past-Help/webp/windows.webp" alt="">
+            <img src="images/jpg/Past-Help/windows.jpg" alt="">
             <div class="category category-inf">Infrastructure</div>
             <h3>Window Installation</h3>
             <p>
@@ -129,10 +127,10 @@
             <p>
               Restoring and repairing damage cause by landslides during the 2020 monsoon season. We also made some reinforments on at risk homes.
             </p>
-            <img src="images/Past-Help/webp/landslide-3.webp" alt="">
+            <img src="images/jpg/Past-Help/landslide-3.jpg" alt="">
           </article>
           <article class="card">
-            <img src="images/Past-Help/webp/begnas-yoga-1.webp" alt="">
+            <img src="images/jpg/Past-Help/begnas-yoga-1.jpg" alt="">
             <div class="category category-gen">General</div>
             <h3>Establisment of NLIF Headquaters</h3>
             <p>
