--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
           </article>
           <article class="card card-center bg-dark">
             <div>
-              <div class="category category-hea">Infrastructure</div>
+              <div class="category category-hea">Health</div>
               <h3>Ambulance to Kathmandu</h3>
               <p>
                 A mother was on the verge of losing her 2 year old son. He needed immediate medical treatment. Fortunately, we were able to provide enough funding to send her son to a hospital in Kathmandu. 
