--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
             <p>
               Restoring and repairing damage cause by landslides during the 2020 monsoon season. We also made some reinforments on at risk homes.
             </p>
-            <img src="images/jpg/Past-Help/landslide-3.jpg" alt="">
+            <img src="images/jpg/Past-Help/landslide-3.jpeg" alt="">
           </article>
           <article class="card">
             <img src="images/jpg/Past-Help/begnas-yoga-1.jpg" alt="">
