--- a/index.html
+++ b/index.html
@@ -132,18 +132,14 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row focus">
         <div class="column">
           <div class="column-1">
-            <picture>
-              <source srcset="../images/Past-Help/webp/begnas-yoga-1.webp" type="image/webp">
-              <source srcset="./images/jpg/Past-Help/begnas-yoga-1.jpg" type="image/jpeg"> 
-              <img src="./images/jpg/Past-Help/begnas-yoga-1.jpg" alt="">
-            </picture>
+            <img src="./images/jpg/Past-Help/HQ-art-2.jpg" alt="">
           </div>
         </div>
         <div class="column">
           <div class="column-2">
-            <h2>Establishment of NLIF Headquaters</h2>
+            <h2>Development Classes at the NLIF Headquarters</h2>
             <p>
-              With many projects already complete, and many more projects to come, a headquarters was needed. We were fortunate to secure a 2 year lease of a building that was not being used. The money from our rent will go towards supporting a family in the village. Monthly donations will help us to pay for the headquarters, and with an extra 2 rooms, we are now able to house volunteers.
+              Our new headquarters is now up and running. We have held multiple classes including a kickboxing class for self-defence, and an art class for the local children. A big thank you goes to Priya Thagar for translating. 
             </p>
             <a href="#donate-main" class="btn btn-outline">
               <i class="fas fa-chevron-right"></i>  Donate Now</a>
