--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script
+      src="https://kit.fontawesome.com/d13e26e731.js"
+      crossorigin="anonymous"
+    ></script>
   <meta charset="UTF-8">
   <meta name="description" content="Nepal Life Improvement Foundation is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
   <meta property="og:title" content="Nepal Life Improvement Foundation">
@@ -54,7 +58,7 @@
       <h1>Nepal Life Improvement Foundation</h1>
       <p>Improving the lives of Nepalese villagers one project at a time</p>
       <a href="#donate-main" class="btn">
-        <i class="fas fa-chevron-right"></i>  Donate</a>
+        <i class="fas fa-chevron-right"></i>  Donate Today</a>
     </div>
   </header>
 
@@ -66,7 +70,7 @@
           <img src="./icons/kindness.svg" alt="">
           <div>
             <h3>Assisting Those Experiencing Hardship</h3>         
-            <p>Our focus is on small scale projects for individual and families, on level of urgency
+            <p>Our focus is on small scale projects for individuals and families, on level of urgency
               and basic needs</p>
           </div>
         </div>
@@ -82,9 +86,10 @@
         <div class="icons icons-3">
           <img src="./icons/respect.svg" alt="">
           <div>
-            <h3>An Opportunity For Generosity</h3>         
-            <p>Make a donation. An opportunity for those to share their good fortune with others
-facing hardship due merely to the circumstances of their birth</p>
+            <a href="#donate-main" class="btn btn-icons">
+              <i class="fas fa-chevron-right"></i>  Donate Today</a>
+            <h3>A Chance to Give</h3>         
+            <p>All donations will be greatly appreciated and wisely spent</p>
           </div>
         </div>
       </div>
@@ -132,14 +137,16 @@ facing hardship due merely to the circumstances of their birth</p>
       <div class="row focus">
         <div class="column">
           <div class="column-1">
-            <img src="./images/jpg/Past-Help/HQ-art-2.jpg" alt="">
+            <img src="./images/jpg/Past-Help/begnas-yoga-1.jpg" alt="">
           </div>
         </div>
         <div class="column">
           <div class="column-2">
-            <h2>Development Classes at the NLIF Headquarters</h2>
+            <h2>Pachabhaiya Community Development Centre</h2>
             <p>
-              Our new headquarters is now up and running. We have held multiple classes including a kickboxing class for self-defence, and an art class for the local children. A big thank you goes to Priya Thagar for translating. 
+              We have been approached by local community leaders with an opportunity to take over a large three story building that was recently left vacant. <br>
+              We are converting it to a Community Resource Centre that we will use to host a variety of educational and skill development workshops and programs, including a demonstration permaculture garden where locals can learn sustainable agriculture. Other workshop plans include bee keeping, jewellery making, literacy classes for women, English classes, home repair and tool training, environmental stewardship and more. We have begun facilitating weekly fitness classes and art classes for children. The cost of operating this facility will be $2000 a month. Management and Program coordination is on a volunteer basis, however we will provide income for local labour and workshop instructors. 
+   
             </p>
             <a href="#donate-main" class="btn btn-outline">
               <i class="fas fa-chevron-right"></i>  Donate Now</a>
@@ -247,7 +254,7 @@ facing hardship due merely to the circumstances of their birth</p>
     <!-- Photo Gallery -->
     <section id="gallery" class="section-margin photos flex-grid section-padding">
       <header class="section-header">
-        <h2>Nepal Photo Gallery</h2>
+        <h2>Pachabhaiya Village Photo Gallery</h2>
       </header>
 
       <div class="gal-grid">
@@ -336,7 +343,7 @@ facing hardship due merely to the circumstances of their birth</p>
         <div class="column">
           <div class="column-2">
             <h2>Our Projects</h2>
-            <p>In order to provide for the needs of the villagers, we are constantly consulting with village committees to ensure that the help given will provide the maximum benefit. Our current projects are focused on villagers near to Begnas Tal. To read more about our current and past projects, click on the button below
+            <p>Our current focus is on improving the lives of the 300 families in Pachabhaiya village. We work alongside community leaders to ensure that the help given will provide the maximum benefit.
             </p>
             <a href="./projects.html" class="btn btn-outline btn-secondary">
               <i class="fas fa-chevron-right"></i>  Read More</a>
