--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
   
       <div class="content">
         <h1>Projects</h1>
-        <a href="#donate-main" class="btn">
+        <a href="index.html#donate-main" class="btn">
           <i class="fas fa-chevron-right"></i>  Donate</a>
       </div>
     </header>
@@ -56,7 +56,7 @@
           <article class="card">
             <img src="images/jpg/Past-Help/begnas-yoga-1.jpg" alt="">
             <div>
-              <div class="category category-gen">General</div>
+              <div class="category category-gen card-center">General</div>
               <h3>Establisment of Pachabhaiya Community Development Centre</h3>
               <p>
                 This will be used to host a variety of educational and skill development workshops and programs. The cost of operating this facility will be $2000 a month. Management and Program coordination is on a volunteer basis, however we will provide income for local labour and workshop instructors. 
@@ -82,7 +82,7 @@
             </p>
           </article>
           <article class="card">
-            <div class="category category-inf">Infrastructure</div>
+            <div class="category category-inf ">Infrastructure</div>
             <h3>Construction and Home Repair Projects</h3>
             <p>
               We have been able to fund new construction and necessary home repairs on several houses in the village affected by the earthquake and severe monsoon damage. We have replaced roofs, built new kitchens and renovated living spaces to strengthen walls and foundations.
