--- a/projects.html
+++ b/projects.html
@@ -151,7 +151,7 @@
     <footer id="footer" class="bg-dark">
       <p>Copyright &copy; 2020 - All Rights Reserved - Nepal Life Improvement Foundation</p>
       <div class="links">
-        <p>Photos by <a href="https://www.facebook.com/lillian.mason.58?__tn__=%2CdC-R-R&eid=ARDAuWczIzdLymhIirB5S-M5uTXUH7tLKDx1b9uDKGKwbHrnSPAQi_rCFILQIlGMrzd0q05m5gn0duB-&hc_ref=ARSv0S_MP-bg66NTHAat_MP1DEmYGp0D6XyQfRd9_eVCVj1M6qkUruuJSZOs8Ro6Zs4&fref=nf" target="_blank" title="Lilly">Lilly Mason</a></p>
+        <p>Photos by <a href="https://www.facebook.com/lillian.mason.58?__tn__=%2CdC-R-R&eid=ARDAuWczIzdLymhIirB5S-M5uTXUH7tLKDx1b9uDKGKwbHrnSPAQi_rCFILQIlGMrzd0q05m5gn0duB-&hc_ref=ARSv0S_MP-bg66NTHAat_MP1DEmYGp0D6XyQfRd9_eVCVj1M6qkUruuJSZOs8Ro6Zs4&fref=nf" target="_blank" title="Lilly">Lilly Mason</a> and <a href="https://unsplash.com/@ackley5" target="_blank" >Jeff Ackley</a></p>
       </div>
     </footer>
 
