--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
               <div class="category category-gen card-center">General</div>
               <h3>Establisment of Pachabhaiya Community Development Centre</h3>
               <p>
-                This will be used to host a variety of educational and skill development workshops and programs. The cost of operating this facility will be $2000 a month. Management and Program coordination is on a volunteer basis, however we will provide income for local labour and workshop instructors. 
+                This will be used to host a variety of educational and skill development workshops and programs. Management and Program coordination is on a volunteer basis, however we will provide income for local labour and workshop instructors. 
               </p>
             </div>
             
