--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/utilities.css">
-  <link rel="stylesheet" media="screen and (max-width: 984px)" href="css/mobile.css">
+  <link rel="stylesheet" media="screen and (max-width: 1024px)" href="css/mobile.css">
   <title>Nepal Life Improvement Foundation</title>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
@@ -56,11 +56,16 @@
 
     <div class="content">
       <h1>Nepal Life Improvement Foundation</h1>
-      <p>Helping to provide opportunities for Nepalese Villagers</p>
-      <!-- <video width="600px" height="350px" controls autoplay>
+      <!-- <p>Helping to provide opportunities for Nepalese Villagers</p>
+      <video width="600px" height="350px" controls autoplay>
         <source src="/images/Nepal-Life-Improvement-Foundation.mp4" type="video/mp4">
-      </video>
-      <iframe src="https://youtu.be/kknL862OyUs" frameborder="0" width="850px" height="500px"></iframe> -->
+      </video> -->
+      <div>
+        <div class="embed-container">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/kknL862OyUs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+      </div>
       <a href="#donate-main" class="btn">
         <i class="fas fa-chevron-right"></i>  Donate Today</a>
     </div>
@@ -141,7 +146,7 @@
       <div class="row focus">
         <div class="column">
           <div class="column-1">
-            <img src="./images/jpg/Past-Help/begnas-yoga-1.jpg" alt="">
+            <img src="./images/jpg/Past-Help/begnas-yoga.jpg" alt="">
           </div>
         </div>
         <div class="column">
@@ -281,7 +286,7 @@
           </a>
         </div>
         <div class="gal gal-9">
-          <a href="./images/gal/rainbow.jpeg" 
+          <a href="./images/gal/rainbow-2.jpg" 
           data-lightbox="photos" 
           data-title="Village Rainbow">
           <img src="" alt="">
