--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
                 Repairing the roof of the Gumba Stupa Buddhist Temple, damaged from monsoon rains. An important cultural and spiritual centre. The majority of the labour was done by volunteers from the village. 
               </p>
             </div>
-            <img src="images/jpg/Past-Help/stupa-2.jpg" alt="" />
+            <img src="images/jpg/Past-Help/temple-new.JPG" alt="" />
           </article>
           <article class="card">
             <img src="images/jpg/Past-Help/windows.jpg" alt="">
