--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <link rel="stylesheet" href="css/utilities.css">
   <link rel="stylesheet" media="screen and (max-width: 1024px)" href="css/mobile.css">
   <title>Nepal Life Improvement Foundation</title>
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
 </head>
 <body id="home">
@@ -225,7 +224,6 @@
       <header class="section-header">
         <h2>Pachabhaiya Village Photo Gallery</h2>
       </header>
-
       <div class="gal-grid">
         <div class="gal gal-1">
           <a href="./images/gal/sunset-1.jpeg" 
@@ -413,24 +411,21 @@
     </div>
   </footer>
 
+  <!-- Lightbox jquery -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/lightbox.min.js"></script>
   <script>
     // Smooth Scrolling
-    $('#navbar a, .btn').on('click', function (e) {
-        if (this.hash !== '') {
-          e.preventDefault();
- 
-          const hash = this.hash;
- 
-          $('html, body').animate(
-            {
-              scrollTop: $(hash).offset().top - 100,
-            },
-            800
-          );
-        }
+    document.querySelectorAll('a[href^="#"]').forEach(elem => {
+      elem.addEventListener('click', e => {
+        e.preventDefault();
+        document.querySelector(elem.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth',
+          offsetTop: -120
+          });
+          800
       });
+    });
   </script>
 
 
