--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script
-      src="https://kit.fontawesome.com/d13e26e731.js"
-      crossorigin="anonymous"
-    ></script>
+<!-- Add font aswesome cdn for chevron icon -->
   <meta charset="UTF-8">
   <meta name="description" content="Nepal Life Improvement Foundation is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
   <meta property="og:title" content="Nepal Life Improvement Foundation">
-  <meta property="og:description" content="NLIF is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
+  <meta property="og:description" content="NLIF is a Canadian NGO. We are devoted to helping to provide opportunities for Nepalese Villagers. All donations will be greatly appreciated and wisely spent.">
   <meta property="og:image" content="https://nepallife.org/images/mountain-1.jpg">
   <meta property="og:url" content="https://nepallife.org">
 
@@ -18,6 +15,7 @@
   <meta name="google-site-verification" content="T1DPOFo7gv6vX0tBv3P16foDh2wync4wwa9sSPvnv7E" />
   <meta name="yandex-verification" content="2ecb50d890795f0c" />
   <meta name="msvalidate.01" content="40FDF646A6A589717E0209625D0C26D4" />
+  <meta name="theme-color" content="#057389">
   <link rel="shortcut icon" type="image/x-icon" href="./icons/favicon.ico">
   <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -63,7 +61,6 @@
           <div class="hide-pop-out">
 
           </div>
-          <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/kknL862OyUs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
 
       </div>
@@ -246,7 +243,7 @@
           </a>
         </div>
         <div class="gal gal-6">
-          <a href="./images/jpg/mountain-3.jpg" 
+          <a href="./images/jpg/mountain-3-small.jpg" 
           data-lightbox="photos" 
           data-title="Annapurna Mountain">
           <img src="" alt="">
@@ -261,14 +258,14 @@
           </a>
         </div>
         <div class="gal gal-8">
-          <a href="./images/gal/flower-2.JPEG" 
+          <a href="./images/gal/flower-3.jpg" 
           data-lightbox="photos" 
           data-title="Flower Beauty">
           <img src="" alt="">
           </a>
         </div>
         <div class="gal gal-9">
-          <a href="./images/gal/rainbow-2.jpg" 
+          <a href="./images/gal/rainbow-3.jpg" 
           data-lightbox="photos" 
           data-title="Village Rainbow">
           <img src="" alt="">
