--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script
-      src="https://kit.fontawesome.com/d13e26e731.js"
-      crossorigin="anonymous"
-    ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Nepal Life Improvement Foundation is a Canadian NGO. We are devoted to improving the lives of Nepalese villagers one project at a time. Share your generosity and make a donation today.">
+    <meta property="og:title" content="Nepal Life Improvement Foundation">
+    <meta property="og:description" content="NLIF is a Canadian NGO. We are devoted to helping to provide opportunities for Nepalese Villagers. All donations will be greatly appreciated and wisely spent.">
+    <meta property="og:image" content="https://nepallife.org/images/Nepal/village-workers-3.jpg">
+    <meta property="og:url" content="https://nepallife.org/projects.html">
+    <meta name="google-site-verification" content="T1DPOFo7gv6vX0tBv3P16foDh2wync4wwa9sSPvnv7E" />
+    <meta name="yandex-verification" content="2ecb50d890795f0c" />
+    <meta name="msvalidate.01" content="40FDF646A6A589717E0209625D0C26D4" />
+    <meta name="theme-color" content="#057389">
     <link rel="shortcut icon" type="image/x-icon" href="./icons/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/utilities.css">
