--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <meta name="keywords" content="Nepal Life Improvement Foundation, nlif, NLIF, Charity, NGO, nepallife, Nepal, Donate, Donation, canada, nepal life, nepal,  Maury Mason, founder, Villagers, Help, Give, Improvement, Development, Growth, Gift, Benefit, Support, Projects,">
   <meta name="author" content="Robbie Prokop, Maury Mason, Lilly Mason">
   <meta name="google-site-verification" content="T1DPOFo7gv6vX0tBv3P16foDh2wync4wwa9sSPvnv7E" />
-  <meta name="yandex-verification" content="2ecb50d890795f0c" />
   <meta name="msvalidate.01" content="40FDF646A6A589717E0209625D0C26D4" />
   <meta name="theme-color" content="#057389">
   <link rel="shortcut icon" type="image/x-icon" href="./icons/favicon.ico">
@@ -384,9 +383,9 @@
   
   <!-- footer -->
   <footer id="footer" class="bg-dark">
-    <p>Copyright &copy; 2020 - All Rights Reserved - Nepal Life Improvement Foundation</p>
+    <p>Copyright &copy; 2022 - All Rights Reserved - Nepal Life Improvement Foundation</p>
     <div class="links">
-      <p>Icons made by <a href="http://www.freepik.com" target="_blank" title="Freepik">Freepik,</a> <a href="https://www.flaticon.com/free-icon/charity_2869375?term=charity&page=5&position=84" target="_blank" title="Nikita Golubev">Nikita Golubev, </a> and <a href="https://www.flaticon.com/authors/srip" target="_blank" title="srip">srip </a>from <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">flaticon.com</a></p>
+      <!-- <p>Icons made by <a href="http://www.freepik.com" target="_blank" title="Freepik">Freepik,</a> <a href="https://www.flaticon.com/free-icon/charity_2869375?term=charity&page=5&position=84" target="_blank" title="Nikita Golubev">Nikita Golubev, </a> and <a href="https://www.flaticon.com/authors/srip" target="_blank" title="srip">srip </a>from <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">flaticon.com</a></p> -->
       <p>Photos by <a href="https://www.facebook.com/lillian.mason.58?__tn__=%2CdC-R-R&eid=ARDAuWczIzdLymhIirB5S-M5uTXUH7tLKDx1b9uDKGKwbHrnSPAQi_rCFILQIlGMrzd0q05m5gn0duB-&hc_ref=ARSv0S_MP-bg66NTHAat_MP1DEmYGp0D6XyQfRd9_eVCVj1M6qkUruuJSZOs8Ro6Zs4&fref=nf" target="_blank" title="Lilly">Lilly Mason, </a>, Sankalak, Robbie Prokop, <a href="https://www.pexels.com/photo/woman-in-red-dresses-carrying-firewood-3820222/" target="_blank" title="Meyer">Volker Meyer, and </a> <a href="https://unsplash.com/@antoinebarres" target="_blank">Antoine Barrès</a></p>
     </div>
   </footer>
